# Data-structures-and-algorithms-in-C

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_BUILD.md  build.sh
include/data_structures/array/: array.h
include/data_structures/bit_vector/: bit_vector.h
include/data_structures/bloom_filter/: bloom_filter.h
include/data_structures/disjoint_set/: disjoint_set.h
include/data_structures/graph/: graph.h
include/data_structures/hashing/: hash_functions.h  hash_table.h
include/data_structures/heap/: heap.h
include/data_structures/linked_list/: circular_linked_list.h  doubly_linked_list.h  singly_linked_list.h
include/data_structures/queue/: queue.h
include/data_structures/stack/: stack.h
include/data_structures/tree/binary_search_tree/: bst.h
include/data_structures/tree/binary_tree/: binary_tree.h
include/data_structures/tree/red_black_tree/: rb_tree.h
include/utils/: result_code.h
src/data_structures/array/: array.c
src/data_structures/linked_list/: singly_linked_list.c
src/utils/: result_code.c
tests/: CMakeLists.txt
tests/array/: test_array.c
